--- a/docs/latex/0main.tex
+++ b/docs/latex/0main.tex
@@ -125,7 +125,8 @@ una señal generada por el micro mediante \textit{Pulse-Width Modulation}. En la
 electrónicos empleados, los buses de comunicaciones y se discute la estructura del robot.\\
 La odometría del robot se obtiene a partir de una estimación de la posición a partir de encoders ópticos y de la velocidad y aceleración medidas por la IMU. La fusión
 sensorial se realiza con un filtro de Kalman extendido, implementado en el paquete \textit{robot localization} de ROS. El código desarollado para este proyecto y el uso de 
-software externo es expuesto en la sección tres de este mismo documento. El código se puede encontrar de forma íntegra en el repositorio \url{https://github.com/marrcogrova/SLAM_Wheel-E} con licencia libre.\\
+software externo es expuesto en la sección tres de este mismo documento.\\ 
+El código se puede encontrar de forma íntegra en el repositorio \url{https://github.com/marrcogrova/SLAM_Wheel-E} con licencia libre.\\
 
 Todo el sistema, exceptuándo el control de bajo nivel del micro, corre en ROS Kinetic, en una configuración de multi-masters que relega los procesos computacionalmente costosos
 (algoritmos de SLAM y fusión sensorial) a un portátil conectado a la Raspberry a través de una red \textit{Wireless} dedicada.\\
@@ -143,7 +144,7 @@ Más adelante, se expone en profundidad una breve explicación teórica de las m
 \input{3slam.tex}
 
 \newpage
-\bibliography{orb_cite}
+\bibliography{cites}
 \nocite{murORB2}
 \nocite{rtabmap}
 \nocite{hornung13auro}
@@ -160,4 +161,3 @@ Más adelante, se expone en profundidad una breve explicación teórica de las m
 % \url{https://introlab.3it.usherbrooke.ca/mediawiki-introlab/images/7/7a/Labbe18JFR_preprint.pdf} \\
 % \url{https://introlab.3it.usherbrooke.ca/mediawiki-introlab/images/b/bc/TRO2013.pdf}
 \end{document}
-
